# bat_backend

./: .gitignore  .sethost.plx.swp  .zeroconf_init.plx.swp  README.md  array-cmd.sdx  bat_backend.php  data_collector.plx  master.plx  sethost.plx  temp.data.  temp.data.123AB7F3998D86  temp.data.12FDF5A9CBD86  temp.data.1D36D3EFC186  temp.data.2568D17841BE  temp.data.69ADA15E50D86  temp.data.9BA2498F7186  temp.data.B8F98D55B3D86  temp.data.F03789864186  zeroconf_init.plx
adc/: CMakeLists.txt
adc/src/: Net.h  bat.h.in  c_buffer.hpp  control.cpp  event_detection.cpp  how_to_use_NETH.cpp  recorder.cpp  recorder.h  recorder.hpp  utility.h
